--- a/bio.html
+++ b/bio.html
@@ -9,5 +9,6 @@
 	<h1>
 		Bio
 	</h1>
+	<p> Meghan is a Tufts University senior, double majoring in Cognitive and Brain Science and Computer Science. Interested in pursuing a clinical psychology graduate degree, she has focused her studies on courses in psychology, child development, computer science, and linguistics, in order to prepare her for a career in research. Outside of her academic interests, Meghan loves singing and theater, and is part of a Disney a cappella group at Tufts. </p>
 </body>
 </html>
