--- a/bio.html
+++ b/bio.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<h1>
-		Bio
+		Biography
 	</h1>
-	<h2> Meghan is a Tufts University senior, double majoring in Cognitive and Brain Science and Computer Science. Interested in pursuing a clinical psychology graduate degree, she has focused her studies on courses in psychology, child development, computer science, and linguistics, in order to prepare her for a career in research. Outside of her academic interests, Meghan loves singing and theater, and is part of a Disney a cappella group at Tufts. </h2>
+	<h2>I am a Tufts University senior, double majoring in Cognitive and Brain Science and Computer Science. Interested in pursuing a clinical psychology graduate degree, I have focused my studies on courses in psychology, child development, computer science, and linguistics, in order to prepare for a career in research. Outside of my academic interests, I love singing and theater, and am part of a Disney a cappella group at Tufts. </h2>
 </body>
 </html>
