--- a/bio.html
+++ b/bio.html
@@ -10,5 +10,6 @@
 		Biography
 	</h1>
 	<h2>I am a Tufts University senior, double majoring in Cognitive and Brain Science and Computer Science. Interested in pursuing a clinical psychology graduate degree, I have focused my studies on courses in psychology, child development, computer science, and linguistics, in order to prepare for a career in research. Outside of my academic interests, I love singing and theater, and am part of a Disney a cappella group at Tufts. </h2>
+	<h4><a href="index.html">home </a>
 </body>
 </html>
