fixed errors found by validator

--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang = "en">
-<html>
 <head>
 	<title> Bio </title>
 	<link href = "stylesheet.css" rel="stylesheet"/>
@@ -10,6 +9,6 @@
 		Biography
 	</h1>
 	<h2>I am a Tufts University senior, double majoring in Cognitive and Brain Science and Computer Science. Interested in pursuing a clinical psychology graduate degree, I have focused my studies on courses in psychology, child development, computer science, and linguistics, in order to prepare for a career in research. Outside of my academic interests, I love singing and theater, and am part of a Disney a cappella group at Tufts. </h2>
-	<h4><a href="index.html">home </a>
+	<h4><a href="index.html">home </a></h4>
 </body>
 </html>
